--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Daniel Miles - Curriculum Vitae</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
     <div class="print-button">
@@ -15,9 +17,6 @@
     <div class="cv-container">
         <header>
             <div class="profile">
-                <!-- <div class="profile-image">
-                    <div class="image-placeholder">DM</div>
-                </div> -->
                 <div class="profile-info">
                     <h1>Daniel Miles</h1>
                     <h2>Sr. Front-End Developer</h2>
