adding github link

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                         <p><i class="fas fa-phone"></i> +972-526922688</p>
                         <p><i class="fas fa-map-marker-alt"></i> Israel</p>
                         <p><i class="fab fa-linkedin"></i> <a href="https://linkedin.com/in/daniel-miles-88b378b5" target="_blank">LinkedIn Profile</a></p>
+                        <p><i class="fab fa-github"></i> <a href="https://github.com/dmiles77" target="_blank">GitHub Profile</a></p>
                         <p><i class="fas fa-globe"></i> <a href="https://dmiles77.github.io/" target="_blank">Portfolio Website</a></p>
                     </div>
                 </div>
