--- a/index.html
+++ b/index.html
@@ -41,12 +41,92 @@
             <section class="experience">
                 <h3>Work Experience</h3>
                 
+                <div class="experience-item freelance-section">
+                    <div class="experience-header">
+                        <h4>Freelance Developer</h4>
+                        <div class="company-date">
+                            <span class="company">Self-Employed</span>
+                            <span class="date">March 2025 - Present</span>
+                        </div>
+                    </div>
+                    
+                    <div class="freelance-projects">
+                        <div class="freelance-project-card">
+                            <div class="project-title-row">
+                                <h5>Manifaster App</h5>
+                                <div class="project-links">
+                                    <a href="https://apps.apple.com/il/app/manifaster/id6744014087" target="_blank" class="project-badge">
+                                        <i class="fab fa-apple"></i> App Store
+                                    </a>
+                                    <a href="https://play.google.com/store/apps/details?id=com.dmiles77.manifaster" target="_blank" class="project-badge">
+                                        <i class="fab fa-google-play"></i> Google Play
+                                    </a>
+                                </div>
+                            </div>
+                            <p class="project-description">Developed and published a mindfulness app on both Apple App Store and Google Play Store</p>
+                            <div class="tech-stack">
+                                <span class="tech-tag">React Native</span>
+                            </div>
+                        </div>
+
+                        <div class="freelance-project-card">
+                            <div class="project-title-row">
+                                <h5>Mispar.co.il</h5>
+                                <div class="project-links">
+                                    <a href="https://www.mispar.co.il/" target="_blank" class="project-badge">
+                                        <i class="fas fa-external-link-alt"></i> Visit Site
+                                    </a>
+                                </div>
+                            </div>
+                            <p class="project-description">Built a platform dedicated to the buying and selling of premium phone numbers in Israel, offering a vast selection of unique numbers for personal and business needs</p>
+                            <div class="tech-stack">
+                                <span class="tech-tag">Next.js</span>
+                                <span class="tech-tag">PostgreSQL</span>
+                                <span class="tech-tag">Supabase</span>
+                            </div>
+                        </div>
+
+                        <div class="freelance-project-card">
+                            <div class="project-title-row">
+                                <h5>Audio2videos.com</h5>
+                                <div class="project-links">
+                                    <a href="https://audio2videos.com/" target="_blank" class="project-badge">
+                                        <i class="fas fa-external-link-alt"></i> Visit Site
+                                    </a>
+                                </div>
+                            </div>
+                            <p class="project-description">Created a free online tool that converts audio files into professional videos with visualizers for platforms like YouTube, TikTok, and Instagram Reels</p>
+                            <div class="tech-stack">
+                                <span class="tech-tag">React</span>
+                                <span class="tech-tag">100% Frontend</span>
+                            </div>
+                        </div>
+
+                        <div class="freelance-project-card">
+                            <div class="project-title-row">
+                                <h5>OrderFlowz.com</h5>
+                                <div class="project-links">
+                                    <a href="https://www.orderflowz.com/" target="_blank" class="project-badge">
+                                        <i class="fas fa-external-link-alt"></i> Visit Site
+                                    </a>
+                                </div>
+                            </div>
+                            <p class="project-description">Developed a small CRM tool for small businesses to track and manage orders and tasks efficiently</p>
+                            <div class="tech-stack">
+                                <span class="tech-tag">Next.js</span>
+                                <span class="tech-tag">PostgreSQL</span>
+                                <span class="tech-tag">Supabase</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="experience-item">
                     <div class="experience-header">
                         <h4>Senior Front-End Developer</h4>
                         <div class="company-date">
                             <span class="company">Payem</span>
-                            <span class="date">2022 - Present</span>
+                            <span class="date">2022 - March 2025</span>
                         </div>
                     </div>
                     <ul>
